src/snapshots/pbsql__reference_extractor__tests__another_select.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices: []
  relations:
    - - value: ~/books/eloScores
        quote_style: "\""
    - - value: ~/books/things
        quote_style: "\""
  original_sql:
    - ""
    - "            SELECT"
    - "                COUNT(*) AS \"rank0\""
    - "            FROM \"~/books/eloScores\" AS \"eloScores\""
    - "            JOIN \"~/books/eloScores\" AS \"comparisonScore\""
    - "                ON eloScores.thingId = ?"
    - "            JOIN \"~/books/things\" AS \"books\""
    - "                ON books.id = eloScores.thingId"
    - "            WHERE"
    - "                books.excluded = ?"
    - "                AND ("
    - "                    eloScores.score > comparisonScore.score"
    - "                    OR ("
    - "                        eloScores.score = comparisonScore.score"
    - "                        AND eloScores.thingId > comparisonScore.thingId"
    - "                    )"
    - "                )"
    - "            LIMIT ? OFFSET ?"
    - "        "
